Fix spacing between elements

--- a/src/styles/components/_cookie.scss
+++ b/src/styles/components/_cookie.scss
@@ -12,7 +12,7 @@
     display: flex;
     align-items: baseline;
     justify-content: space-between;
-    @include flex-gap(3rem);
+    @include flex-gap(2.5rem);
     padding-top: 1.125rem;
     padding-bottom: 1.125rem;
 
